# staged-tc

./: CHANGELOG.md  feb-21.md  questions.md  references.md  staged-tc.cabal  tasks.md
app/: Examples.hs  NbE.hs  NbEPolarised.hs  TC.hs
desugaring/: CHANGELOG.md  LICENSE  desugaring.cabal
desugaring/app/: Main.hs
examples/: polymorphic-recursion.md  simple.md
overloaded-quotes/examples/: StaticPtr.hs
overloaded-quotes/examples/static-ptr/: LICENSE  static-ptr.cabal
overloaded-quotes/examples/static-ptr/app/: Main.hs  Serialize.hs
