cabal-version:   3.12
name:            staged-tc
version:         0.1.0.0
license:         NONE
author:          Matthew Pickering
maintainer:      matthewtpickering@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules: TC, Examples
    build-depends:    base, sop-core, template-haskell
    hs-source-dirs:   app
    default-language: Haskell2010
