cabal-version:      3.4
name:               static-ptr
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Ellis Kesterton
maintainer:         31514698+eayus@users.noreply.github.com
-- copyright:
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wno-orphans

executable static-ptr
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base,
        binary,
    hs-source-dirs:   app
    default-language: GHC2021
    default-extensions:
        GADTs,
        StaticPointers,
